--- a/index.html
+++ b/index.html
@@ -309,6 +309,42 @@
       border-radius: 9999px;
       background: #0ea5e9;
     }
+    .tt-eff {
+  position: absolute;
+  left: 6px;
+  bottom: 6px;
+  width: 22px;
+  height: 22px;
+  border-radius: 6px;
+  background: rgba(0,0,0,0.55);
+  box-shadow: 0 2px 4px rgba(0,0,0,0.35);
+  display: grid;
+  place-items: center;
+  overflow: hidden;
+}
+.tt-eff img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  display: block;
+}
+
+/* Fallback 2-letter badge if icon missing */
+.tt-eff-fallback {
+  font-family: 'RuneScape-Quill', Inter, ui-sans-serif;
+  color: #ffd166;
+  font-size: 11px;
+  text-shadow: 0 1px 0 rgba(0,0,0,.85);
+}
+
+/* Token with icon */
+.tt-token img {
+  width: 16px;
+  height: 16px;
+  object-fit: contain;
+  display: block;
+  border-radius: 4px;
+}
   </style>
 </head>
 
@@ -381,6 +417,11 @@
 
       return [gridRef, cols];
     }
+
+    function getEffectIconUrl(kind) {
+  if (!kind || kind === 'none') return null;
+  return `assets/images/sstatuseffects/${kind}.png`;
+}
 
     function makeDefaultTile(n) {
       return {
@@ -529,56 +570,67 @@ function useSortable(containerRef, items, setItems) {
     return () => sortable.destroy();
   }, [containerRef, items, setItems]);
 }
-    function TileCard({ tile, onSelect, selected, marker, onDropEffect }) {
-      const eff = EFFECTS.find(e => e.kind === tile.effect?.kind);
-      const hasIcon = Boolean(tile.iconFile);
-      const isStart = String(tile.id) === '1';
+function TileCard({ tile, onSelect, selected, marker, onDropEffect }) {
+  const kind = tile.effect?.kind || 'none';
+  const iconUrl = getEffectIconUrl(kind);
+  const hasIcon = Boolean(tile.iconFile);
+  const isStart = String(tile.id) === '1';
 
-      return (
-        React.createElement('div', { className: selected ? 'rounded-xl ring-2 ring-indigo-400' : '' },
-          React.createElement('div', {
-            className: 'tt-tile drag-handle',
-            onClick: onSelect,
-            tabIndex: 0,
-            onDragOver: (e) => {
-              if (e.dataTransfer.types.includes('text/tt-effect') || e.dataTransfer.types.includes('application/json')) {
-                e.preventDefault();
-                e.currentTarget.parentElement.classList.add('tt-drop-target');
-              }
-            },
-            onDragLeave: (e) => {
-              e.currentTarget.parentElement.classList.remove('tt-drop-target');
-            },
-            onDrop: (e) => {
-              e.preventDefault();
-              e.currentTarget.parentElement.classList.remove('tt-drop-target');
-              let json = e.dataTransfer.getData('text/tt-effect') || e.dataTransfer.getData('application/json');
-              if (!json) return;
-              try {
-                const eff = JSON.parse(json);
-                if (!eff || typeof eff !== 'object') return;
-                if (typeof onDropEffect === 'function') onDropEffect(eff);   // <- provided by parent
-              } catch { }
-            }
-          },
+  // 2-letter fallback (e.g., 'move_forward' -> 'MF')
+  const short = (kind || '').split('_').map(s => s[0] || '').join('').slice(0,2).toUpperCase();
+
+  return (
+    React.createElement('div', { className: selected ? 'rounded-xl ring-2 ring-indigo-400' : '' },
+      React.createElement('div', {
+        className: 'tt-tile drag-handle',
+        onClick: onSelect,
+        tabIndex: 0,
+        onDragOver: (e) => {
+          if (e.dataTransfer.types.includes('text/tt-effect') || e.dataTransfer.types.includes('application/json')) {
+            e.preventDefault();
+            e.currentTarget.parentElement.classList.add('tt-drop-target');
+          }
+        },
+        onDragLeave: (e) => {
+          e.currentTarget.parentElement.classList.remove('tt-drop-target');
+        },
+        onDrop: (e) => {
+          e.preventDefault();
+          e.currentTarget.parentElement.classList.remove('tt-drop-target');
+          let json = e.dataTransfer.getData('text/tt-effect') || e.dataTransfer.getData('application/json');
+          if (!json) return;
+          try {
+            const eff = JSON.parse(json);
+            if (!eff || typeof eff !== 'object') return;
+            if (typeof onDropEffect === 'function') onDropEffect(eff);
+          } catch {}
+        }
+      },
         (marker && React.createElement('div', { className: `tt-marker ${marker === 'FINISH' ? 'finish' : ''}` }, marker)),
         React.createElement('div', { className: 'tt-tile-num' }, isStart ? '' : `#${tile.tileNumber}`),
         !isStart && hasIcon
-              ? React.createElement('img', {
-                src: tile.iconFile,
-                className: 'tt-tile-icon',
-                draggable: false,                      // prevent image-native ghost
-                onError: (e) => { e.currentTarget.style.display = 'none'; }
-              })
+          ? React.createElement('img', {
+              src: tile.iconFile,
+              className: 'tt-tile-icon',
+              draggable: false,
+              onError: (e) => { e.currentTarget.style.display = 'none'; }
+            })
           : !isStart && React.createElement('div', { className: 'tt-tile-name' }, (tile.name || 'Untitled')),
-        (!isStart && tile.effect && tile.effect.kind && tile.effect.kind !== 'none') &&
-            React.createElement('div', { className: 'tt-tile-badge', title: tile.effect.kind },
-              (tile.effect.kind || '').split('_').map(s => s[0]).join('').toUpperCase()
-            )
-          )
+
+        // Effect icon overlay (only when not START and effect != none)
+        (!isStart && kind !== 'none') && React.createElement('div', { className: 'tt-eff', title: kind },
+          iconUrl
+            ? React.createElement('img', {
+                src: iconUrl,
+                alt: kind,
+                onError: (e) => { e.currentTarget.replaceWith(Object.assign(document.createElement('div'), { className: 'tt-eff-fallback', innerText: short })); }
+              })
+            : React.createElement('div', { className: 'tt-eff-fallback' }, short)
         )
-      );
-    }
+      )
+    )
+  );
+}
 
 
     function EffectEditor({ tile, onChange }) {
@@ -622,6 +674,17 @@ function useSortable(containerRef, items, setItems) {
                 }
               }, EFFECTS.map(x => React.createElement('option', { key: x.kind, value: x.kind }, x.label)))
             ),
+            (eff.kind !== 'none') &&
+React.createElement('div', { className: 'flex items-center gap-2' },
+  React.createElement('div', { className: 'tt-eff' },
+    React.createElement('img', {
+      src: getEffectIconUrl(eff.kind),
+      alt: eff.kind,
+      onError: (e)=>{ e.currentTarget.replaceWith(Object.assign(document.createElement('div'), { className: 'tt-eff-fallback', innerText: (eff.kind||'').split('_').map(s=>s[0]).join('').toUpperCase().slice(0,2) })); }
+    })
+  ),
+  React.createElement('div', { className: 'text-xs text-slate-600' }, `Effect: ${eff.kind}${eff.amount!=null?` | amount=${eff.amount}`:''}${eff.index!=null?` | index=${eff.index}`:''}`)
+),
             (eff.kind !== 'none') && React.createElement('div', null,
               React.createElement('label', { className: 'block text-xs font-medium text-slate-600 mb-1' }, 'Trigger'),
               React.createElement('select', {
@@ -713,70 +776,80 @@ function useSortable(containerRef, items, setItems) {
       );
     }
 
-    function EffectBuilderPanel({ onBuild }) {
-      const [kind, setKind] = useState('none');
-      const [trigger, setTrigger] = useState('on_next_roll');
-      const [amount, setAmount] = useState('');
-      const [index, setIndex] = useState('');
+function EffectBuilderPanel() {
+  const [kind, setKind] = useState('none');
+  const [trigger, setTrigger] = useState('on_next_roll');
+  const [amount, setAmount] = useState('');
+  const [index, setIndex] = useState('');
 
-      const meta = EFFECTS.find(e => e.kind === kind) || EFFECTS[0];
-      const needsAmount = ['move_forward', 'move_back', 'double_next_roll', 'reverse_next_roll', 'shield_next_negative'].includes(kind) && meta.params.some(p => p.name === 'amount');
-      const needsIndex = ['teleport_to'].includes(kind);
+  const meta = EFFECTS.find(e => e.kind === kind) || EFFECTS[0];
+  const needsAmount = meta.params.some(p => p.name === 'amount');
+  const needsIndex  = meta.params.some(p => p.name === 'index');
+  const iconUrl = getEffectIconUrl(kind);
 
-      const payload = {
-        kind,
-        ...(kind === 'none' ? {} : { trigger }),
-        ...(amount !== '' ? { amount: Number(amount) } : {}),
-        ...(index !== '' ? { index: Number(index) } : {}),
+  const payload = {
+    kind,
+    ...(kind === 'none' ? {} : { trigger }),
+    ...(amount !== '' ? { amount: Number(amount) } : {}),
+    ...(index  !== '' ? { index:  Number(index)  } : {}),
+  };
+
+  const onDragStart = (e) => {
+    const text = JSON.stringify(payload);
+    e.dataTransfer.setData('application/json', text);
+    e.dataTransfer.setData('text/tt-effect', text);
+    e.dataTransfer.effectAllowed = 'copy';
+
+    // Try a custom drag image using the effect icon (fallback to the token element)
+    if (iconUrl) {
+      const img = new Image();
+      img.src = iconUrl;
+      img.onload = () => {
+        e.dataTransfer.setDragImage(img, 10, 10);
       };
+    }
+  };
 
-      const onDragStart = (e) => {
-        const text = JSON.stringify(payload);
-        e.dataTransfer.setData('application/json', text);
-        e.dataTransfer.setData('text/tt-effect', text);  // custom mime for safety
-        e.dataTransfer.effectAllowed = 'copy';
-      };
-
-      return (
-        React.createElement('div', { className: 'space-y-3' },
-          React.createElement('div', { className: 'grid grid-cols-2 gap-3' },
-            React.createElement('div', null,
-              React.createElement('label', { className: 'block text-xs font-medium text-slate-600 mb-1' }, 'Effect'),
-              React.createElement('select', { className: 'w-full rounded-lg border-slate-300', value: kind, onChange: e => setKind(e.target.value) },
-                EFFECTS.map(x => React.createElement('option', { key: x.kind, value: x.kind }, x.label))
-              )
-            ),
-            (kind !== 'none') && React.createElement('div', null,
-              React.createElement('label', { className: 'block text-xs font-medium text-slate-600 mb-1' }, 'Trigger'),
-              React.createElement('select', { className: 'w-full rounded-lg border-slate-300', value: trigger, onChange: e => setTrigger(e.target.value) },
-                [
-                  React.createElement('option', { key: 'on_next_roll', value: 'on_next_roll' }, 'on_next_roll'),
-                  React.createElement('option', { key: 'on_land', value: 'on_land' }, 'on_land'),
-                ]
-              )
-            )
-          ),
-          (needsAmount) && React.createElement('div', null,
-            React.createElement('label', { className: 'block text-xs font-medium text-slate-600 mb-1' }, 'amount'),
-            React.createElement('input', { className: 'w-full rounded-lg border-slate-300', type: 'number', min: 1, step: 1, value: amount, onChange: e => setAmount(e.target.value) })
-          ),
-          (needsIndex) && React.createElement('div', null,
-            React.createElement('label', { className: 'block text-xs font-medium text-slate-600 mb-1' }, 'index'),
-            React.createElement('input', { className: 'w-full rounded-lg border-slate-300', type: 'number', min: 1, step: 1, value: index, onChange: e => setIndex(e.target.value) })
-          ),
-          React.createElement('div', { className: 'text-xs text-slate-500' }, 'Drag this token onto a tile to apply the effect:'),
-          React.createElement('div', {
-            className: 'tt-token',
-            draggable: true,
-            onDragStart,
-            title: 'Drag onto a tile to apply'
-          },
-            React.createElement('span', { className: 'dot' }),
-            React.createElement('span', null, kind === 'none' ? 'None (clear effect)' : `${kind}${amount !== '' ? ` amt=${amount}` : ''}${index !== '' ? ` idx=${index}` : ''}`)
+  return (
+    React.createElement('div', { className: 'space-y-3' },
+      React.createElement('div', { className: 'grid grid-cols-2 gap-3' },
+        React.createElement('div', null,
+          React.createElement('label', { className: 'block text-xs font-medium text-slate-600 mb-1' }, 'Effect'),
+          React.createElement('select', { className: 'w-full rounded-lg border-slate-300', value: kind, onChange: e => setKind(e.target.value) },
+            EFFECTS.map(x => React.createElement('option', { key: x.kind, value: x.kind }, x.label))
+          )
+        ),
+        (kind !== 'none') && React.createElement('div', null,
+          React.createElement('label', { className: 'block text-xs font-medium text-slate-600 mb-1' }, 'Trigger'),
+          React.createElement('select', { className: 'w-full rounded-lg border-slate-300', value: trigger, onChange: e => setTrigger(e.target.value) },
+            [
+              React.createElement('option', { key: 'on_next_roll', value: 'on_next_roll' }, 'on_next_roll'),
+              React.createElement('option', { key: 'on_land', value: 'on_land' }, 'on_land'),
+            ]
           )
         )
-      );
-    }
+      ),
+      (needsAmount) && React.createElement('div', null,
+        React.createElement('label', { className: 'block text-xs font-medium text-slate-600 mb-1' }, 'amount'),
+        React.createElement('input', { className: 'w-full rounded-lg border-slate-300', type: 'number', min: 1, step: 1, value: amount, onChange: e => setAmount(e.target.value) })
+      ),
+      (needsIndex) && React.createElement('div', null,
+        React.createElement('label', { className: 'block text-xs font-medium text-slate-600 mb-1' }, 'index'),
+        React.createElement('input', { className: 'w-full rounded-lg border-slate-300', type: 'number', min: 1, step: 1, value: index, onChange: e => setIndex(e.target.value) })
+      ),
+      React.createElement('div', { className: 'text-xs text-slate-500' }, 'Drag this token onto a tile to apply the effect:'),
+      React.createElement('div', {
+        className: 'tt-token',
+        draggable: true,
+        onDragStart,
+        title: 'Drag onto a tile to apply'
+      },
+        iconUrl && React.createElement('img', { src: iconUrl, alt: kind, onError: (e)=>{ e.currentTarget.remove(); } }),
+        React.createElement('span', null, kind === 'none' ? 'None (clear effect)' : `${kind}${amount !== '' ? ` amt=${amount}` : ''}${index !== '' ? ` idx=${index}` : ''}`)
+      )
+    )
+  );
+}
 
 
     function Toolbar({ onNew, onClear, onImport, onExport, count }) {
@@ -862,7 +935,7 @@ function buildSnakePositions(count, ROW_LEN = 15) {
       return positions;
     }
 
-function PreviewGrid({ tiles, onSelect, selectedId, setTiles }) {
+function PreviewGrid({ tiles, onSelect, selectedId, setTiles, onDropEffect }) {
   const listRef = React.useRef(null);
   const ROW_LEN = 15;
 
@@ -930,13 +1003,13 @@ function PreviewGrid({ tiles, onSelect, selectedId, setTiles }) {
             className: `tt-cell ${i === 0 ? 'tt-fixed' : ''}`, // first tile is fixed
             style: cellStyleFor(i),
           },
-          React.createElement(TileCard, {
-            tile: t,
-            onSelect: () => onSelect(t.id),
-            selected: t.id === selectedId,
-            marker,
-            // when index 0 (START), TileCard will also render with editing/drag disabled
-          })
+React.createElement(TileCard, {
+  tile: t,
+  onSelect: () => onSelect(t.id),
+  selected: t.id === selectedId,
+  marker,
+  onDropEffect: (eff) => onDropEffect(t.id, eff)
+})
         );
       })
     )
@@ -1094,7 +1167,13 @@ function PreviewGrid({ tiles, onSelect, selectedId, setTiles }) {
             // Left: Board area
             React.createElement('div', { className: 'space-y-3' },
               React.createElement('div', { className: 'tt-board-wrap' },
-                React.createElement(PreviewGrid, { tiles, onSelect: setSelectedId, selectedId, setTiles })
+                React.createElement(PreviewGrid, {
+  tiles,
+  onSelect: setSelectedId,
+  selectedId,
+  setTiles,
+  onDropEffect: (tileId, eff) => applyEffectToTile(tileId, eff)
+})
               ),
               React.createElement('div', { className: 'text-xs text-slate-500' }, 'Tip: drag a tile to reorder. Export to download the JSON.')
             ),
