--- a/index.html
+++ b/index.html
@@ -37,12 +37,15 @@
       min-height: 100vh;
     }
 
+    html, body { overflow-x: hidden; }
+
     :root {
       --tile: 84px;
       --bronze: #cd7f32;
       --bronze-dark: #8a531e;
       --ink: #2c1a0e;
     }
+    
 
     .drag-handle {
       cursor: grab;
