--- a/index.html
+++ b/index.html
@@ -194,7 +194,6 @@
       color: rgba(0, 0, 0, 0.55);
       margin-left: auto;
     }
-.tt-grid[data-scale] { }
 
 .tt-grid {
   display: grid;
@@ -403,6 +402,11 @@
   transition: transform .06s ease, box-shadow .12s ease;
 }
 .btn-stone:hover { transform: translateY(-1px); }
+
+.editor-prose, .editor-prose * {
+  color: #000 !important;
+  text-shadow: 1px 0px 1px rgba(255,255,255,0.4);
+}
   </style>
 </head>
 
@@ -740,7 +744,7 @@ function TileCard({ tile, onSelect, selected, marker, onDropEffect }) {
         React.createElement('div', { className: 'space-y-3' },
           React.createElement('div', { className: 'grid grid-cols-2 gap-3' },
             React.createElement('div', null,
-              React.createElement('label', { className: 'block text-xs font-medium text-slate-600 mb-1' }, 'Effect'),
+              React.createElement('label', { className: 'block text-xs font-medium text-slate-600 mb-1 editor-prose' }, 'Effect'),
               React.createElement('select', {
                 className: 'w-full rounded-lg border-slate-300',
                 value: eff.kind || 'none',
@@ -951,7 +955,7 @@ function EffectBuilderPanel() {
       return (
         React.createElement('div', { className: 'flex flex-wrap items-center gap-2' },
           React.createElement('button', { className: 'btn-bronze', onClick: onNew }, 'Add Tile'),
-React.createElement('button', { className: 'btn-stone',  onClick: onClear }, 'Clear'),
+React.createElement('button', { className: 'btn-bronze',  onClick: onClear }, 'Clear'),
 React.createElement('button', { className: 'btn-bronze', onClick: triggerImport }, 'Import JSON'),
 React.createElement('button', { className: 'btn-bronze', onClick: onExport }, 'Export JSON'),
 
@@ -1260,13 +1264,13 @@ React.createElement(TileCard, {
   onDropEffect: (tileId, eff) => applyEffectToTile(tileId, eff)
 })
               ),
-              React.createElement('div', { className: 'text-xs text-slate-500' }, 'Tip: drag a tile to reorder. Export to download the JSON.')
+              React.createElement('div', { className: 'text-xs text-slate-500 editor-prose' }, 'Tip: drag a tile to reorder. Export to download the JSON.')
             ),
 
             // Right: Editor
-            React.createElement('aside', { className: 'panel-medieval p-4 space-y-6' },
+            React.createElement('aside', { className: 'panel-medieval p-4 space-y-6 editor-prose' },
               React.createElement('div', null,
-                React.createElement('h2', { className: 'text-sm font-semibold text-slate-700 mb-3' }, 'Tile Editor'),
+                React.createElement('h2', { className: 'text-sm font-semibold text-slate-700 mb-3 editor-prose' }, 'Tile Editor'),
                 React.createElement(EditorPanel, {
                   tile: selectedTile,
                   setTile: replaceTile,
@@ -1275,13 +1279,13 @@ React.createElement(TileCard, {
                 })
               ),
               React.createElement('div', null,
-                React.createElement('h2', { className: 'text-sm font-semibold text-slate-700 mb-3' }, 'Effect Builder'),
+                React.createElement('h2', { className: 'text-sm font-semibold text-slate-700 mb-3 editor-prose' }, 'Effect Builder'),
                 React.createElement(EffectBuilderPanel, null)
               )
             )
           ),
 
-          React.createElement('footer', { className: 'text-center text-xs text-slate-500 pt-2' }, 'Made for GitHub Pages — no backend required.')
+          React.createElement('footer', { className: 'text-center text-xs text-slate-500 pt-2 editor-prose' }, 'Made for GitHub Pages — no backend required.')
         )
       );
     }
