--- a/index.html
+++ b/index.html
@@ -1235,7 +1235,7 @@ React.createElement(TileCard, {
       };
 
       return (
-        React.createElement('div', { className: 'max-w-7xl mx-auto p-6 space-y-6' },
+        React.createElement('div', { className: 'mx-auto p-6 space-y-6' },
           React.createElement('header', { className: 'flex items-center gap-3' },
             React.createElement('div', { className: 'w-10 h-10 rounded-xl bg-indigo-600 text-white grid place-items-center font-bold' }, 'TT'),
             React.createElement('div', null,
@@ -1285,7 +1285,7 @@ React.createElement(TileCard, {
             )
           ),
 
-          React.createElement('footer', { className: 'text-center text-xs text-slate-500 pt-2 editor-prose' }, 'Made for GitHub Pages — no backend required.')
+          React.createElement('footer', { className: 'text-center text-xs text-slate-500 pt-2 editor-prose' }, 'Made to work with OSClanTools Discord Bot - By Wni.')
         )
       );
     }
